<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/padding_horizontal"
        android:paddingTop="@dimen/padding_vertical"
        android:paddingRight="@dimen/padding_horizontal"
        android:paddingBottom="@dimen/padding_vertical">

        <TextView
            android:id="@+id/recoverPasswordTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:fontFamily="sans-serif-black"
            android:hint="@string/recover_password"
            android:textColor="#000000"
            android:textColorHint="@color/text"
            android:textSize="40dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/recoverPasswordDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin_top"
                android:fontFamily="sans-serif-light"
                android:hint="@string/recover_password_description"
                android:textColor="@color/text"
                android:textColorHint="@color/text"
                android:textSize="@dimen/text_size" />
        </LinearLayout>


        <TextView
            android:id="@+id/emailLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin_top"
            android:hint="@string/email"
            android:textColorHint="@color/text"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/label_margin_top"
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:padding="@dimen/text_input_padding" />

        <Button
            android:id="@+id/sendRecoveryLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/send_recovery_link"
            android:padding="@dimen/button_padding"
            android:backgroundTint="@drawable/button_state_colors"
            android:textColorHint="@color/white"
            android:textSize="@dimen/text_size"
            tools:ignore="TextContrastCheck"
            />
    </LinearLayout>
</layout>

